A whole bunch of changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div id="top-controls">
 
           <div id="display">
-            <h1 id="led" class="on-top">--</h1>
+            <div id="led">
+              <h1 class="on-top">--</h1>
+            </div>
             <h3>Count</h3>
           </div>
 
