--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
   <script src="js/webAudioClass.js"></script>
   <script src="js/simon.js"></script>
+  <script src="js/simonRefactor.js"></script>
   <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
       ':35729/livereload.js?snipver=1"></' + 'script>')
