--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 
   <script src="js/webAudioClass.js"></script>
-  <script src="js/simon.js"></script>
+  <!-- <script src="js/simon.js"></script> -->
   <script src="js/simonRefactor.js"></script>
   <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
