--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
   <div id="main-container">
-  <!-- Wow it works great! -->
+    
     <div id="game-container">
 
       <div class="row">
@@ -47,18 +46,19 @@
 
           <div id="display">
             <div id="led">
-              <h1 class="on-top">--</h1>
+              <h1>--</h1>
             </div>
             <h3>Count</h3>
           </div>
 
           <div id="start">
-            <div class="button on-top"></div>
+            <div class="button"></div>
             <h3>Start</h3>
           </div>
 
           <div id="strict">
-            <div class="button on-top"></div>
+            <div class="strict-led"></div>
+            <div class="button"></div>
             <h3>Strict</h3>
           </div>
 
@@ -66,7 +66,7 @@
 
         <div id="bottom-controls">
           <h3>Off</h3>
-          <div class="on-switch on-top can-click">
+          <div class="on-switch can-click">
             <div class="switch"></div>
           </div>
           <h3>On</h3>
