--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="Simon Game for Free Code Camp">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Some PWA stuff not setup yet -->
+  <!-- <link rel="manifest" href="site.webmanifest"> -->
+  <!-- <link rel="apple-touch-icon" href="icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Squada+One" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -23,7 +23,7 @@
   <![endif]-->
 
   <div id="main-container">
-    
+
     <div id="game-container">
 
       <div class="row">
@@ -80,8 +80,7 @@
   <!-- <script src="js/simon.js"></script> -->
   <script src="js/simonRefactor.js"></script>
   <!-- <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
-      ':35729/livereload.js?snipver=1"></' + 'script>')
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
   </script> -->
 </body>
